# setup-workspace

./: install_packages.sh  update_packages.sh
misc/: pyproject.toml  renv.toml  systools_macos.yml  systools_rhel8.yml
scripts/: install_afni.sh  install_ants.sh  install_cpac.sh  install_dcm2niix.sh  install_fastsurfer.sh  install_fmriprep.sh  install_freesurfer.sh  install_fsl.sh  install_fsleyes.sh  install_hippunfold.sh  install_itksnap.sh  install_mriqc.sh  install_python_environment.sh  install_r_source.sh  install_system_packages.sh  install_tedana.sh  install_workbench.sh  install_xcp-d.sh
