[project]
name = "pyenv"
version = "0.1.0"

# Package version constrains updated on 2025-06-21
[tool.pixi.dependencies]
python = "3.12.*"
[tool.pixi.pypi-dependencies]
pip = ">=25.0"
setuptools = ">=80.0"
wheel = ">=0.45"
numpy = ">=2.1"
pandas = ">=2.3.0"
polars = { version = ">=1.38", extras = [
    "database",
    "excel",
    "fsspec",
    "pyarrow",
    "pydantic",
    "style",
    "timezone",
] }
ipython = ">=9.3"
matplotlib = ">=3.10"
seaborn = ">=0.13.2"
jupyterlab = ">=4.4"
scipy = ">=1.14"
scikit-learn = ">=1.7.0"
plotly = ">=6.6"
kaleido = ">=1.0"
vtk = ">=9.3.1"
mayavi = ">=4.8.3"
PyQt5 = ">=5.15"
numba = ">=0.61"
# Statistics
statsmodels = ">=0.14"
pingouin = ">=0.6.0"
pymer4 = ">=0.9.2"
formulae = ">=0.5.4"
# Utility
joblib = ">=1.5"
tqdm = ">=4.67"
itables = ">=2.4"
pyjanitor = ">=0.31"
h5py = ">=3.14"
natsort = ">=8.4"
# JupyterLab utility
ipywidgets = ">=8.1.7"
"jupyterlab-lsp" = ">=5.1"
"python-lsp-server" = { version = ">=1.12", extras = ["all"] }
"jupyterlab-code-formatter" = ">=3.0"

[tool.pixi.feature.graphic.pypi-dependencies]
bokeh = ">=3.7"
lets-plot = ">=4.6"
panel = ">=1.7"
holoviews = ">=1.20"
pyvista = ">=0.45"
scikit-image = ">=0.25"
statannotations = ">=0.7"

[tool.pixi.feature.utility.pypi-dependencies]
datalad = ">=1.2"
s3fs = ">=2025"
cookiecutter = ">=2.6"
flask = ">=3.1.0"
flask-cors = ">=6.0.0"
simple-slurm = ">=0.3.6"
# jupyterlab utility
jupytext = ">=1.17"
jupyter_bokeh = ">=4.0"
jupyterlab_execute_time = ">=3.2"
jupyterlab-quarto = ">=0.3"
nbdime = ">=4.0"
# R utility
rpy2 = ">=3.6"
radian = ">=0.6"

[tool.pixi.feature.ml.pypi-dependencies]
torch = ">=2.10"
torchvision = ">=0.22"
torchaudio = ">=2.7"
torchtext = ">=0.18"
pytorch-lightning = ">=2.5"
torchlens = ">=0.1.35"
tensorflow = ">=2.19"
umap-learn = ">=0.5.7"
xgboost = ">=3.0"
yellowbrick = ">=1.5"
einops = ">=0.8"
accelerate = ">=1.12"

[tool.pixi.feature.ml_model.pypi-dependencies]
huggingface_hub = ">=1.5"
datasets = ">=4.6"
tensorflow_hub = ">=0.16"
timm = ">=1.0"
open_clip_torch = ">=2.32"
transformers = ">=5.3"
sentence-transformers = ">=4.1"
usearch = ">=2.19"
sentencepiece = ">=0.2"

[tool.pixi.feature.neuroimaging_basic.pypi-dependencies]
nibabel = { version = ">=5.3", extras = ["all"] }
indexed_gzip = ">=1.9"
nilearn = ">=0.11"
pydra = ">=1.0a1"
nipype = ">=1.11"

[tool.pixi.feature.neuroimaging_utils.pypi-dependencies]
heudiconv = ">=1.3"
dcm2bids = ">=3.2"
bidscoin = ">=4.6"
pybids = ">=0.19.0"
antspyx = ">=0.6.3"
templateflow = ">=24.2"
nitransforms = ">=24.1"
niworkflows = ">=1.13"
mne = { version = ">=1.8.0", extras = ["full"] }
rsatoolbox = ">=0.2"
glmsingle = { git = "https://github.com/cvnlab/GLMsingle.git" }
brainstat = ">=0.4"
hypertools = ">=0.8"
neuropythy = ">=0.12"
neuromaps = { git = "https://github.com/netneurolab/neuromaps.git" }
# plotting
brainspace = ">=0.1.20"
surfplot = ">=0.3.0rc0"
pycortex = ">=1.2.11"
pysurfer = ">=0.11"

[tool.pixi.target.linux.pypi-dependencies]
flash-attn = { url = "https://github.com/zipzou/flash-attention/releases/download/v2.8.3.post1/flash_attn-2.8.3+cu12torch210cxx11abifalse-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl" }
decord = ">=0.6"
qwen-vl-utils = ">=0.0.14"
bitsandbytes = ">=0.49"

[tool.pixi.feature.nct.dependencies]
python = "3.12.*"
[tool.pixi.feature.nct.pypi-dependencies]
cbig_network_correspondence = ">=0.3.3"

[tool.pixi.feature.deepmreye.dependencies]
python = "3.11.*"
[tool.pixi.feature.deepmreye.pypi-dependencies]
deepmreye = ">=0.3"

[tool.pixi.feature.gensim.dependencies]
python = "3.12.*"
[tool.pixi.feature.gensim.pypi-dependencies]
gensim = ">=4.3.3"

[tool.pixi.environments]
default = { features = [
    "default",
    "graphic",
    "utility",
    "ml",
    "ml_model",
    "neuroimaging_basic",
    "neuroimaging_utils",
] }
nct = { features = ["nct"], no-default-feature = true }
deepmreye = { features = ["deepmreye"], no-default-feature = true }
gensim = { features = ["gensim"], no-default-feature = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
